fix how video game information section was being styled on mobile devices

--- a/client/src/sass/components/_more-info-modal.scss
+++ b/client/src/sass/components/_more-info-modal.scss
@@ -73,27 +73,19 @@
     justify-content: flex-start;
   }
 
-  &__section-container-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
   &__section-container-two {
-    flex: 0 0 100%;
-
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-
-    @include setBreakPoints(450) {
-      flex-direction: column;
-    }
   }
 
   &__info-container {
     flex: 0 0 50%;
     margin-top: $sm-spacing;
+
+    @include setBreakPoints(450) {
+      flex: 0 0 100%;
+    }
   }
 
   &__summary-container {
